--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,18 @@
 {
   "manifest_version": 3,
-  "name": "AI Token Tracker",
+  "name": "sustAIn",
   "version": "1.0.0",
   "description": "Track your LLM token usage and environmental impact",
-  "permissions": ["storage"],
+  "permissions": [
+    "storage"
+  ],
   "host_permissions": [
     "https://chatgpt.com/*",
     "https://chat.openai.com/*",
     "https://claude.ai/*",
     "https://gemini.google.com/*",
-    "https://aistudio.google.com/*"
+    "https://aistudio.google.com/*",
+    "<all_urls>"
   ],
   "content_scripts": [
     {
@@ -20,13 +23,17 @@
         "https://gemini.google.com/*",
         "https://aistudio.google.com/*"
       ],
-      "js": ["content.js"],
+      "js": [
+        "content.js"
+      ],
       "run_at": "document_end"
     }
   ],
-  "background": { "service_worker": "background.js" },
+  "background": {
+    "service_worker": "background.js"
+  },
   "action": {
     "default_popup": "dashboard/popup.html",
-    "default_title": "AI Token Tracker"
+    "default_title": "sustAIn"
   }
 }
