--- a/firebase-backend/requirements.txt
+++ b/firebase-backend/requirements.txt
@@ -1,5 +1,5 @@
-flask>=2.3.0
-flask-cors>=4.0.0
-firebase-admin>=6.2.0
-python-dotenv>=1.0.0
-gunicorn>=21.0.0
+flask==2.3.3
+flask-cors==4.0.0
+firebase-admin==6.5.0
+python-dotenv==1.0.1
+gunicorn==21.2.0
